# dagster-dunks

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  parameters_data_processing.yml  parameters_feature_engineering.yml  parameters_model_inference.yml  parameters_model_training.yml
src/dagster_dunks/: __init__.py  __main__.py  settings.py
src/dagster_dunks/pipelines/data_processing/: __init__.py  nodes.py  pipeline.py
src/dagster_dunks/pipelines/feature_engineering/: nodes.py  pipeline.py
src/dagster_dunks/pipelines/model_inference/: __init__.py  nodes.py  pipeline.py
src/dagster_dunks/pipelines/model_training/: nodes.py  pipeline.py
tests/pipelines/data_processing/: test_nodes.py  test_pipeline.py
tests/pipelines/model_inference/: test_pipeline.py
